gitops/gitops-gateway/wso2/wso2-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: cilium
spec:
  controllerName: io.cilium/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  gatewayClassName: cilium
  listeners:

  - hostname: wso2-disk.podzone.cloud
    name: wso2-disk-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: wso2-disk.podzone.cloud
    name: wso2-disk-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: wso2-disk-secret
    allowedRoutes:
      namespaces:
        from: All

  - hostname: wso2-network.podzone.cloud
    name: wso2-network-podzone-cloud-http
    port: 80
    protocol: HTTP
  - hostname: wso2-network.podzone.cloud
    name: wso2-network-podzone-cloud-https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
        - name: wso2-network-secret
    allowedRoutes:
      namespaces:
        from: All

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: kube-system
spec:
  hostnames:
  - wso2-network.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: hubble-ui
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /


---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linstor
  namespace: piraeus-datastore
spec:
  hostnames:
  - wso2-disk.podzone.cloud
  parentRefs:
  - name: gateway
    namespace: kube-system
    kind: Gateway
  rules:
  - backendRefs:
    - name: linstor-controller
      port: 3370
    matches:
    - path:
        type: PathPrefix
        value: /
